--- a/index.html
+++ b/index.html
@@ -8,36 +8,98 @@
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <script src="https://kit.fontawesome.com/7e9c8afb1a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <h1>Hello</h1>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <main class="container"> 
+    
+    <section class="accordion-section">
+      
+      <div class="images">
+        <img src="images/illustration-woman-online-desktop.svg" alt="">
+      </div>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+=      
+      <div class="accordion-content">
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+        <h1>Faq</h1>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+        <div class="QandA">
+                  <!-- acc-1 -->
+          <div class="accordion">
+            <h2 class="question">
+              <button>How many team members can I invite?</button>
+              <i class="fa-solid fa-chevron-up"></i>
+            </h2>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+            <div class="answer">
+              <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+                team members for the Premium plan.</p>
+            </div>
+          </div>
+
+                  <!-- acc-2 -->
+          <div class="accordion">
+            <h2 class="question">
+              <button>What is the maximum file upload size?</button>
+              <i class="fa-solid fa-chevron-up"></i>
+            </h2>
+
+            <div class="answer">
+              <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            </div>
+          </div>
+
+
+                  <!-- acc-3 -->
+          <div class="accordion">
+            <h2 class="question">
+              <button>How do I reset my password?</button>
+              <i class="fa-solid fa-chevron-up"></i>
+            </h2>
+
+            <div class="answer">
+              <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+                A reset link will be emailed to you.</p>
+            </div>
+          </div>
+
+                  <!-- acc-4 -->
+          <div class="accordion">
+            <h2 class="question">
+              <button>Can I cancel my subscription?</button>
+              <i class="fa-solid fa-chevron-up"></i>
+            </h2>
+
+            <div class="answer">
+              <p>  Yes! Send us a message and we’ll process your request no questions asked.</p>
+            </div>
+          </div>
+
+                  <!-- acc-5 -->
+          <div class="accordion">
+            <h2 class="question">
+              <button> Do you provide additional support?</button>
+              <i class="fa-solid fa-chevron-up"></i>
+            </h2>
+
+            <div class="answer">
+              <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+  </main>
+  
+  <!-- 
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
